Updated for CS2
This is my initial pass to update the config from CS:GO to work on CS2

--- a/Numpad Menu/numpadbinds_template.cfg
+++ b/Numpad Menu/numpadbinds_template.cfg
@@ -1,16 +1,16 @@
-bind "KP_7"
-bind "KP_8"
-bind "KP_9"
-bind "KP_4"
-bind "KP_5"
-bind "KP_6"
-bind "KP_1"
-bind "KP_2"
-bind "KP_3"
-bind "KP_0"
-bind "KP_DEL"
+bind scancode95 "7"
+bind scancode96 "8"
+bind scancode97 "9"
+bind scancode92 "4"
+bind scancode93 "5"
+bind scancode94 "6"
+bind scancode89 "1"
+bind scancode90 "2"
+bind scancode91 "3"
+bind scancode98 "0"
+bind scancode99 "."
 
-bind "kp_multiply" "clear; bindshelp; showconsole"
+alias "consoleguide" "helpecho01;play sounds\buttons\blip1;helpecho02;showconsole"
 
 alias "bindshelp" "helpecho01;helpecho02;"
 alias "helpecho01" "bindshelp01;bindshelp02;bindshelp03;bindshelp04;bindshelp05;bindshelp06;bindshelp07;bindshelp08;"
