--- a/Numpad Menu/numpadbindsbuy.cfg
+++ b/Numpad Menu/numpadbindsbuy.cfg
@@ -1,16 +1,16 @@
-bind "KP_7" "buy m4a1"
-bind "KP_8" "buy vesthelm"
-bind "KP_9" "buy flashbang;"
-bind "KP_4" " buy defuser;"
-bind "KP_5" "buy vest"
-bind "KP_6" "buy hegrenade;"
-bind "KP_1" "buy molotov;"
-bind "KP_2" " buy decoy;"
-bind "KP_3" " buy smokegrenade;"
-bind "KP_0" "buy tec9"
-bind "KP_DEL" "buy p250"
+bind scancode95 "buy m4a1"
+bind scancode96 "buy vesthelm"
+bind scancode97 "buy flashbang;"
+bind scancode92 "buy defuser;"
+bind scancode93 "buy vest"
+bind scancode94 "buy hegrenade;"
+bind scancode89 "buy molotov;"
+bind scancode90 "buy decoy;"
+bind scancode91 "buy smokegrenade;"
+bind scancode98 "buy tec9"
+bind scancode99 "buy p250"
 
-bind "kp_multiply" "bindshelp; showconsole"
+alias "consoleguide" "helpecho01;play sounds\buttons\blip1;helpecho02;showconsole"
 
 alias "bindshelp" "helpecho01;helpecho02;"
 alias "helpecho01" "bindshelp01;bindshelp02;bindshelp03;bindshelp04;bindshelp05;bindshelp06;bindshelp07;bindshelp08;"
