--- a/Numpad Menu/numpadbindsmenu.cfg
+++ b/Numpad Menu/numpadbindsmenu.cfg
@@ -1,16 +1,16 @@
-bind "KP_7" "buybinds"
-bind "KP_8" "ttbinds"
-unbind "KP_9"
-bind "KP_4" "slambinds"
-unbind "KP_5"
-unbind "KP_6"
-bind "KP_1" "viewmodelbinds"
-unbind "KP_2"
-bind "KP_3" "practicebinds"
-unbind "KP_0"
-unbind "KP_DEL"
+bind scancode95 "buybinds"
+bind scancode96 "ttbinds"
+unbind scancode97
+bind scancode92 "slambinds"
+unbind scancode93
+unbind scancode94
+bind scancode89 "viewmodelbinds"
+unbind scancode90
+bind scancode91 "practicebinds"
+unbind scancode98
+unbind scancode99
 
-bind "kp_multiply" "clear; bindshelp; showconsole"
+alias "consoleguide" "helpecho01;play sounds\buttons\blip1;helpecho02;showconsole"
 
 alias "bindshelp" "helpecho01;helpecho02;"
 alias "helpecho01" "bindshelp01;bindshelp02;bindshelp03;bindshelp04;bindshelp05;bindshelp06;bindshelp07;bindshelp08;"
