--- a/Numpad Menu/numpadbindsprac.cfg
+++ b/Numpad Menu/numpadbindsprac.cfg
@@ -1,16 +1,16 @@
-unbind "KP_7"
-bind "KP_8" "bot_place; playvol buttons\blip1 1;"
-bind "KP_9" "cast_ray; say Ray Cast; playvol buttons\blip1 1;"
-bind "KP_4" "+ffw"
-bind "KP_5" "pen; playvol buttons\blip1 1;"
-bind "KP_6" "clip; playvol buttons\blip1 1;"
-bind "KP_1" "nades; say Giving grenades;"
-bind "KP_2" "settp; say Teleport location set.;"
-bind "KP_3" "tp; say Teleporting.;"
-bind "KP_0" "gods; say Godsmode toggled. See console for on/off; playvol buttons\blip1 1;"
-bind "KP_DEL" "noclip; say Noclip; playvol buttons\blip1 1;"
+unbind scancode95
+bind scancode96 "bot_place; playvol buttons\blip1 1;"
+bind scancode97 "cast_ray; say Ray Cast; playvol buttons\blip1 1;"
+bind scancode92 "+ffw"
+bind scancode93 "pen; playvol buttons\blip1 1;"
+bind scancode94 "clip; playvol buttons\blip1 1;"
+bind scancode89 "nades; say Giving grenades;"
+bind scancode90 "settp; say Teleport location set.;"
+bind scancode91 "tp; say Teleporting.;"
+bind scancode98 "gods; say Godsmode toggled. See console for on/off; playvol buttons\blip1 1;"
+bind scancode99 "noclip; say Noclip; playvol buttons\blip1 1;"
 
-bind "kp_multiply" "clear; bindshelp; showconsole"
+alias "consoleguide" "helpecho01;play sounds\buttons\blip1;helpecho02;showconsole"
 
 alias "settp" "playvol player\sprayer 1; say "Teleport Location Set.";writeip; con_logfile cfg/banned_ip.cfg; getpos_exact; con_logfile ."
 alias "tp" "playvol player\suit_sprint 1; exec banned_ip"
