--- a/Numpad Menu/numpadbindsslam.cfg
+++ b/Numpad Menu/numpadbindsslam.cfg
@@ -1,16 +1,16 @@
-bind "KP_7" "playlist_tcc"
-unbind "KP_8"
-bind "KP_9" "slam_saycurtrack"
-unbind "KP_4"
-unbind "KP_5"
-bind "KP_6" "slam_sayteamcurtrack"
-unbind "KP_1"
-unbind "KP_2"
-bind "KP_3" "clear; slam_curtrack; showconsole"
-unbind "KP_0"
-unbind "KP_DEL"
+bind scancode95 "playlist_tcc"
+unbind scancode96
+bind scancode97 "slam_saycurtrack"
+unbind scancode92
+unbind scancode93
+bind scancode94 "slam_sayteamcurtrack"
+unbind scancode89
+unbind scancode90
+bind scancode91 "clear; slam_curtrack; showconsole"
+unbind scancode98
+unbind scancode99
 
-bind "kp_multiply" "clear; bindshelp; showconsole"
+alias "consoleguide" "helpecho01;play sounds\buttons\blip1;helpecho02;showconsole"
 
 alias "bindshelp" "helpecho01;helpecho02;"
 alias "helpecho01" "bindshelp01;bindshelp02;bindshelp03;bindshelp04;bindshelp05;bindshelp06;bindshelp07;bindshelp08;"
