--- a/Numpad Menu/numpadbindstt.cfg
+++ b/Numpad Menu/numpadbindstt.cfg
@@ -1,16 +1,16 @@
-bind "KP_7" "say Harrassment is not a game. Bullyhunters.org"
-bind "KP_8" "say No time, run!"
-bind "KP_9" "say This is you rn \[X.X]/ lmao"
-bind "KP_4" "say I'm pressing E, but I can't take control of the bots."
-bind "KP_5" "say Who set the bots to easy?"
-bind "KP_6" "say With all these flavors why do you choose to be salty?"
-bind "KP_1" "say Don't worry guys, I'm a garbage collector.  I'm used to carrying trash."
-bind "KP_2" "say Check out my mixtape.  It's fire."
-bind "KP_3" " say Move over I have kit"
-bind "KP_0" "saygg"
-bind "KP_DEL" "say ¯\_(ツ)_/¯"
+bind scancode95 "say Harrassment is not a game. Bullyhunters.org"
+bind scancode96 "say No time, run!"
+bind scancode97 "say This is you rn \[X.X]/ lmao"
+bind scancode92 "say I'm pressing E, but I can't take control of the bots."
+bind scancode93 "say Who set the bots to easy?"
+bind scancode94 "say With all these flavors why do you choose to be salty?"
+bind scancode89 "say Don't worry guys, I'm a garbage collector.  I'm used to carrying trash."
+bind scancode90 "say Check out my mixtape.  It's fire."
+bind scancode91 " say Move over I have kit"
+bind scancode98 "saygg"
+bind scancode99 "say ¯\_(ツ)_/¯"
 
-bind "kp_multiply" "clear; bindshelp; showconsole"
+alias "consoleguide" "helpecho01;play sounds\buttons\blip1;helpecho02;showconsole"
 
 alias "bindshelp" "helpecho01;helpecho02;"
 alias "helpecho01" "bindshelp01;bindshelp02;bindshelp03;bindshelp04;bindshelp05;bindshelp06;bindshelp07;bindshelp08;"
