--- a/binds.cfg
+++ b/binds.cfg
@@ -2,38 +2,38 @@ echo "binds.cfg has run"
 
 unbindall
 
-bind "1" "buttonone"
-bind "2" "buttontwo"
-bind "3" "knifeswitch"
-bind "4" "slot4"
-bind "5" "bombswitch"
+bind scancode30 "buttonone"
+bind scancode31 "buttontwo"
+bind scancode32 "knifeswitch"
+bind scancode33 "slot4"
+bind scancode34 "bombswitch"
 
-bind "a" "+left"
-bind "b" "buymenu"
-bind "c" "+smokeswitch"
-bind "d" "+right"
-bind "e" "+defuse"
-bind "f" "+flashswitch"
-bind "g" "+nadeswitch"
-//bind "h" ""
-bind "i" "show_loadout_toggle"
-bind "j" "radio2"
-//bind "k" ""
-bind "l" "+lookatweapon"
-bind "m" "teammenu"
-bind "n" "noclip"
-bind "o" "r_cleardecals"
-bind "p" "music"
-bind "q" "+secondaryswitch"
-bind "r" "+reload"
-bind "s" "+back"
-bind "t" "bombdrop"
-bind "u" "messagemode2"
-bind "v" "+fireswitch"
-bind "w" "+forward"
-bind "x" "+decoyswitch"
-bind "y" "messagemode"
-bind "z" "+newdrop"
+bind scancode4 "+left"
+bind scancode5 "buymenu"
+bind scancode6 "+smokeswitch"
+bind scancode7 "+right"
+bind scancode8 "+defuse"
+bind scancode9 "+flashswitch"
+bind scancode10 "+nadeswitch"
+//bind scancode11 ""
+bind scancode12 "show_loadout_toggle"
+bind scancode13 "radio2"
+//bind scancode14 ""
+bind scancode15 "+lookatweapon"
+bind scancode16 "teammenu"
+bind scancode17 "noclip"
+bind scancode18 "r_cleardecals"
+bind scancode19 "music"
+bind scancode20 "+secondaryswitch"
+bind scancode21 "+reload"
+bind scancode22 "+back"
+bind scancode23 "+bombdrop"
+bind scancode24 "messagemode2"
+bind scancode25 "+fireswitch"
+bind scancode26 "+forward"
+bind scancode27 "+decoyswitch"
+bind scancode28 "messagemode"
+bind scancode29 "+newdrop"
 
 bind "MOUSE_X" "yaw"
 bind "MOUSE_Y" "pitch"
@@ -45,29 +45,31 @@ bind "MOUSE5" "+primaryswitch"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
 
-bind "KP_MINUS" "unmutevoice"
-bind "KP_PLUS" "mutevoice"
+bind scancode86 "unmutevoice"
+bind scancode87 "mutevoice"
 
 // bind "[" ""
 // bind "]" ""
-bind "`" "toggleconsole"
-bind "/" "holdpos"
-bind "'" "followme"
-bind "\" "+jumpthrow"
+bind scancode53 "toggleconsole"
+bind scancode56 "holdpos"
+bind scancode52 "followme"
+bind scancode49 "+jumpthrow"
 
-bind "SPACE" "+jump"
-bind "TAB" "+tabmenu"
-bind "ESCAPE" "cancelselect"
-bind "DEL" "mute"
-bind "PAUSE" "pause"
-bind "SHIFT" "+sneaky"
+bind scancode44 "+jump"
+bind scancode43 "+showscores"
+bind scancode41 "cancelselect"
+bind scancode76 "mute"
+bind scancode72 "pause"
+bind scancode225 "+sneaky"
 //bind "ALT" ""
-bind "CTRL" "+crouchy"
-bind "RCTRL" "+altbinds"
+bind scancode224 "+crouchy"
+bind scancode228 "+altbinds"
 
-bind "KP_MINUS" "unmutevoice"
-bind "KP_PLUS" "mutevoice"
-bind "KP_DIVIDE" "bindsmenu"
+bind scancode86 "unmutevoice"
+bind scancode87 "mutevoice"
+bind scancode84 "bindsmenu"
 
-exec numpadbinds
+bind scancode85 "consoleguide"
+
+exec numpadbindsaliases
 exec numpadbindsbuy
