--- a/nineslot.cfg
+++ b/nineslot.cfg
@@ -16,8 +16,8 @@ alias decoyslot     "slot9; exec nadehair; viewmodel; knifeoff; bind MOUSE1 +thr
 alias fireslot      "slot10; exec nadehair; viewmodel; knifeoff; bind MOUSE1 +thrownade; bind MOUSE2 +tossnade; switchback10; alias correctweapon fireslot;"
 
 //---Holding down the button pulls out knife.  Releasing pulls out intended weapon.---
-alias "+primaryswitch"  "temporaryslot; alias correctweapon primaryslot; bind z +dropprimary;"
-alias "-primaryswitch" "primaryslot; correctweapon; bind z +newdrop;"
+alias "+primaryswitch"  "temporaryslot; alias correctweapon primaryslot; bind scancode29 +dropprimary;"
+alias "-primaryswitch" "primaryslot; correctweapon; bind scancode29 +newdrop;"
 
 alias "+secondaryswitch" "temporaryslot; alias correctweapon secondaryslot;"
 alias "-secondaryswitch" "secondaryslot; correctweapon;"
@@ -38,7 +38,8 @@ alias "-fireswitch" "fireslot;"
 
 //---Bomb drop function.  Press one button to drop the bomb.  This is what switchback is for.---
 alias "bombswitch" "bombslot"
-alias "bombdrop" "use weapon_knife; use weapon_c4; drop; playvol commander\gamecommander_02 1; switchback;"
+alias "+bombdrop" "slot3;slot5"
+alias "-bombdrop" "drop;switchback"
 
 //---Throwing grenades switches back to the normal crosshair---
 alias "+thrownade" "+attack"
