--- a/Crosshairs/bombhair.cfg
+++ b/Crosshairs/bombhair.cfg
@@ -5,12 +5,12 @@ cl_crosshair_dynamic_splitalpha_outermod "0.5"
 cl_crosshair_dynamic_splitdist "7"
 cl_crosshair_outlinethickness "1"
 cl_crosshair_sniper_width "1"
-cl_crosshair_sniper_show_normal_inaccuracy "0"
+//cl_crosshair_sniper_show_normal_inaccuracy "0"
 cl_crosshairalpha "255"
 cl_crosshairdot "0"
-cl_crosshairgap "-22.000000"
+cl_crosshairgap "-28"
 cl_crosshairgap_useweaponvalue "0"
-cl_crosshairscale "0"
+//cl_crosshairscale "0"
 cl_crosshairsize "1.000000"
 cl_crosshairstyle "4"
 cl_crosshairthickness "10.500000"
