--- a/Numpad Menu/numpadbindsaliases.cfg
+++ b/Numpad Menu/numpadbindsaliases.cfg
@@ -1,6 +1,6 @@
-alias "bindsmenu" "exec numpadbindsmenu; play buttons\blip1; alias crosshaircolor whitehair; crosshaircolor;"
-alias "buybinds" "exec numpadbindsbuy; play items\pickup_rifle; alias crosshaircolor greenhair; crosshaircolor;"
-alias "ttbinds" "exec numpadbindstt; play player\death_m_01; alias crosshaircolor redhair; crosshaircolor;"
-alias "practicebinds" "exec numpadbindsprac; play commander\train_activetestingchatter_04; alias crosshaircolor tealhair; crosshaircolor;"
-alias "slambinds" "exec numpadbindsslam; play buttons\blip2; alias crosshaircolor bluehair; crosshaircolor;"
-alias "viewmodelbinds" "exec numpadbindsvm; play commander\train_guntestcomplete_01; alias crosshaircolor purplehair; crosshaircolor;"
+alias "bindsmenu" "exec numpadbindsmenu; play sounds\buttons\blip1; alias crosshaircolor whitehair; whitehair;"
+alias "buybinds" "exec numpadbindsbuy; play sounds\items\pickup_rifle; alias crosshaircolor greenhair; greenhair;"
+alias "ttbinds" "exec numpadbindstt; play sounds\player\death_taser_m_01; alias crosshaircolor redhair; redhair;"
+alias "practicebinds" "exec numpadbindsprac; play commander\train_activetestingchatter_04; alias crosshaircolor tealhair; tealhair;"
+alias "slambinds" "exec numpadbindsslam; play sounds\buttons\blip2; alias crosshaircolor bluehair; bluehair;"
+alias "viewmodelbinds" "exec numpadbindsvm; play commander\train_guntestcomplete_01; alias crosshaircolor purplehair; purplehair;"
