--- a/Numpad Menu/numpadbindsvm.cfg
+++ b/Numpad Menu/numpadbindsvm.cfg
@@ -1,16 +1,16 @@
-bind "KP_7" "alias viewmodel mainmodel; viewmodel"
-bind "KP_8" "alias viewmodel gangstermodel; viewmodel"
-bind "KP_9" "alias viewmodel copmodel; viewmodel"
-unbind "KP_4"
-unbind "KP_5"
-unbind "KP_6"
-bind "KP_1" "alias viewmodel knifemodel; viewmodel"
-bind "KP_2" "alias viewmodel nademodel; viewmodel"
-unbind "KP_3"
-unbind "KP_0"
-unbind "KP_DEL"
+bind scancode95 "alias viewmodel mainmodel; viewmodel"
+bind scancode96 "alias viewmodel gangstermodel; viewmodel"
+bind scancode97 "alias viewmodel copmodel; viewmodel"
+unbind scancode92
+unbind scancode93
+unbind scancode94
+bind scancode89 "alias viewmodel knifemodel; viewmodel"
+bind scancode90 "alias viewmodel nademodel; viewmodel"
+unbind scancode91
+unbind scancode98
+unbind scancode99
 
-bind "kp_multiply" "clear; bindshelp; showconsole"
+alias "consoleguide" "helpecho01;play sounds\buttons\blip1;helpecho02;showconsole"
 
 alias "bindshelp" "helpecho01;helpecho02;"
 alias "helpecho01" "bindshelp01;bindshelp02;bindshelp03;bindshelp04;bindshelp05;bindshelp06;bindshelp07;bindshelp08;"
