--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -5,12 +5,11 @@ echo "-------------------------"
 viewmodel_presetpos 0
 engine_no_focus_sleep 0
 cl_color 1
-cl_allowdownload 0
-cl_autowepswitch 0
 cl_join_advertise 2
 gameinstructor_enable 0
 cl_dm_buyrandomweapons 0
 sv_voicecodec vaudio_celt
+fps_max 999
 
 //---Network---
 cl_interp_ratio 1
@@ -18,13 +17,11 @@ mm_dedicated_search_maxping 50
 
 //---Sound---
 volume 0.16
-voice_scale 1
-snd_toolvolume 0.4
+snd_voipvolume 1
+snd_toolvolume 0.15
 snd_menumusic_volume 0.25
 snd_mapobjective_volume 0.4
 snd_tensecondwarning_volume 0.4
-//snd_musicvolume 0.5
-snd_musicvolume_multiplier_inoverlay 0.5
 snd_deathcamera_volume 1
 snd_roundstart_volume 0.3
 snd_roundend_volume 0.4
@@ -36,11 +33,7 @@ snd_mute_losefocus 0
 
 //---Mouse---
 sensitivity 1.6
-zoom_sensitivity_ratio_mouse .82
-//m_rawinput 1
-m_mouseaccel1 0
-m_mouseaccel2 0
-m_customaccel 0
+zoom_sensitivity_ratio .82
 
 //---Jump Throw Bind---
 alias "+jumpthrow" "+jump;-attack"
@@ -53,52 +46,44 @@ alias "-jumpthrow" "-jump"
 
 //---Quick Alias---
 alias "xx" "exec practice; playvol weapons\c4\c4_explode1 1;"
-alias "gangster" "exec gangster; playvol player\vo\leet\onarollbrag02 1;"
-alias "cop" "exec cop; playvol player\vo\gsg9\onarollbrag01 1;"
 alias "bye" "disconnect"
 alias "quick" "host_timescale 1.5"
 alias "slow" "host_timescale 0.65"
 alias "realtime" "host_timescale 1"
 alias "cheats" "sv_cheats 1"
 alias "r" "mp_restartgame 1"
-alias "fix" "mat_setvideomode 1920 1080 1; mat_setvideomode 1920 1080 0"
+//alias "fix" "mat_setvideomode 1920 1080 1; mat_setvideomode 1920 1080 0"
 alias "reset" "exec autoexec"
 alias "test" "exec testing"
 alias "startslam" "exec musicplayer"
 echo "type startslam into console to use SLAM"
 
-//---Performance Enhancing Drugs---
-cl_forcepreload 1
-cl_disablefreezecam 1
-r_dynamic 0
-fps_max 999
-
 //---HUD Options---
 cl_hud_color 5
-cl_hud_background_alpha 0.15
+//cl_hud_background_alpha 0.15
 safezonex 1
 safezoney 1
-hud_scaling 0.85
-cl_hud_radar_scale 1.3
-cl_radar_always_centered 1
-cl_radar_scale 0.6
-cl_radar_icon_scale_min 1
-cl_hud_playercount_pos 0
-cl_hud_playercount_showcount 0
-cl_hud_healthammo_style 1
+hud_scaling 0.9
 cl_showloadout 1
-cl_loadout_colorweaponnames 1
 cl_use_opens_buy_menu 0
 
-//---Net_Graph Options---
-net_graph 1;
-net_graphheight 2000;
-net_graphproportionalfont 1;
-net_graphpos 2;
+//---Radar Options---
+cl_hud_radar_scale 1.3
+cl_radar_always_centered 1
+cl_radar_icon_scale_min 0.4
+cl_radar_rotate 1
+cl_radar_scale 0.6
+cl_radar_square_with_scoreboard 1
+
+//---Net_Graph has been removed from CS2---
+//net_graph 1;
+//net_graphheight 2000;
+//net_graphproportionalfont 1;
+//net_graphpos 2;
 
 //---Net_Graph w/ Tab---
-alias "+tabmenu" "+showscores; net_graphheight 900;"
-alias "-tabmenu" "-showscores; net_graphheight 2000;"
+//alias "+tabmenu" "+showscores; cl_showfps 2;"
+//alias "-tabmenu" "-showscores; cl_showfps 0;"
 
 //---Viewmodel & Crosshair---
 exec viewmodels
@@ -106,9 +91,6 @@ exec crosshair
 exec crosshaircolors
 alias crosshaircolor greenhair
 crosshaircolor
-
-//---Community Servers---
-cl_disablehtmlmotd 1
 
 //---Use Key---
 alias "+defuse" "+use; r_cleardecals;"
@@ -134,32 +116,28 @@ alias "mutevoicescale"   "alias whathighervoice mutedvoicescale; alias whatlower
 alias "unmutevoicescale" "alias whathighervoice normalvoicescale; alias whatlowervoice lowervoicescale"
 alias "whathighervoice"  "normalvoicescale"
 alias "whatlowervoice"   "lowervoicescale"
-alias "normalvoicescale" "voice_scale 1.00;"
-alias "lowervoicescale"  "voice_scale .675;"
-alias "mutedvoicescale"  "voice_scale 0;"
+alias "normalvoicescale" "snd_voipvolume 1"
+alias "lowervoicescale"  "snd_voipvolume .675;"
+alias "mutedvoicescale"  "snd_voipvolume 0;"
 
 //---Mute Voice---
 alias "+talking" "+voicerecord; voice_scale 1; unmutevoicescale;"
 alias "-talking" "-voicerecord;"
-alias "mutevoice" "voice_scale 0; mutevoicescale; playvol weapons\m4a1\m4a1-1 0.2;"
-alias "unmutevoice" "voice_scale 1; unmutevoicescale; playvol weapons\m4a1\m4a1-1-single 0.2;"
-voice_scale 1
+alias "mutevoice" "snd_voipvolume 0; mutevoicescale; play sounds\weapons\m4a1\m4a1_silencer_01"
+alias "unmutevoice" "snd_voipvolume 1; unmutevoicescale; play sounds\weapons\m4a1\m4a1_us_01"
 
 //---9-Slot Switching---
-exec nineslot.cfg
+exec nineslot
 
 //---Make Console Show on Screen
 developer 0
 con_enable 1
-con_filter_enable 0
-con_filter_text ""
-con_filter_text_out ""
+//con_filter_enable 0
+//con_filter_text ""
+//con_filter_text_out ""
 
 //---GG Spam---
 exec gg
-
-//---Music Stuff---
-exec playlist_tcc
 
 //---Binds---
 exec binds
